# RGB-Agent

./: AGENTS.md  README.md  pyproject.toml
arcgym/agents/: __init__.py  rgb_agent.py
arcgym/environments/arcagi3/: arcagi3_env.py
arcgym/evaluation/: game_sources.py  runner.py  swarm.py
arcgym/utils/: qwen_tool_proxy.py  replay_gif.py
tests/: test_game_sources.py
