[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arcgym"
version = "0.1.0"
description = "ArcGym extensions that plug into the rLLM agent/environment stack."
readme = "README.md"
authors = [
    { name = "ArcGym authors" },
]
requires-python = ">=3.12"
keywords = ["rl", "language-models", "textarena"]
dependencies = [
    "arc-agi>=0.9.1",
    "arcengine>=0.9.3",
    "hydra-core>=1.3",
    "pydantic>=2.5",
    "requests>=2.31",
    "textarena>=0.0.8",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
rearc = [
    "arc-agi-3-local @ git+https://github.com/Tufalabs/re-arc-3.git@v0.1.1",
]

[project.scripts]
arcgym-swarm = "arcgym.evaluation.swarm:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["arcgym", "arcgym.*"]
exclude = ["examples*", "rllm*", "Agent_Context*"]
